--- a/index.html
+++ b/index.html
@@ -1,7 +1,37 @@
 <!doctype html>
 <html lang="ko">
   <head>
-    <meta charset="UTF-8" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="온라인에서 즐기는 합차오목 게임 - 친구들과 함께 실시간으로 대결하세요. 초보자부터 고수까지 모두가 즐길 수 있는 전략 보드게임입니다.">
+    <meta name="keywords" content="합차오목, 오목게임, 온라인보드게임, 전략게임, 멀티플레이어게임, 실시간대전">
+    <meta name="author" content="당신의 웹사이트 이름">
+    <meta name="robots" content="index, follow">
+
+    <!-- 검색엔진 최적화 태그 -->
+    <meta name="google" content="notranslate">
+    <link rel="canonical" href="https://www.sumdiffgmoku.com">
+
+    <!-- 오픈그래프 태그 -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://www.sumdiffgmoku.com">
+    <meta property="og:title" content="합차오목 - 온라인 실시간 대전 전략 게임">
+    <meta property="og:description" content="친구들과 함께 즐기는 실시간 합차오목 게임. 지금 바로 무료로 플레이하세요!">
+    <meta property="og:image" content="https://www.sumdiffgmoku.com/src/assets/og-image.">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
+
+    <!-- 트위터 카드 -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="합차오목 - 온라인 실시간 대전 전략 게임">
+    <meta name="twitter:description" content="친구들과 함께 즐기는 실시간 합차오목 게임. 지금 바로 무료로 플레이하세요!">
+    <meta name="twitter:image" content="https://www.sumdiffgmoku.com/src/assets/og-image">
+
+    <!-- 네이버 웹마스터 도구 인증 -->
+    <meta name="naver-site-verification" content="9b84ecd67d2bfe37528786bad1cdf166e3e49f01" />
+
+    <!-- 다음 웹마스터 도구 인증 -->
+    <meta name="daum-site-verification" content="your-verification-code">
     <link rel="icon" type="image/svg+xml" href="/logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>합차오목</title>
