content: Update metatag content to '합차오목'

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="온라인에서 즐기는 합차오목 게임 - 친구들과 함께 실시간으로 대결하세요. 초보자부터 고수까지 모두가 즐길 수 있는 전략 보드게임입니다.">
     <meta name="keywords" content="합차오목, 오목게임, 온라인보드게임, 전략게임, 멀티플레이어게임, 실시간대전">
-    <meta name="author" content="당신의 웹사이트 이름">
+    <meta name="author" content="합차오목">
     <meta name="robots" content="index, follow">
 
     <!-- 검색엔진 최적화 태그 -->
