fix: Update og-image and twitter-image URLs in metatags

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <meta property="og:url" content="https://www.sumdiffgmoku.com">
     <meta property="og:title" content="합차오목 - 온라인 실시간 대전 전략 게임">
     <meta property="og:description" content="친구들과 함께 즐기는 실시간 합차오목 게임. 지금 바로 무료로 플레이하세요!">
-    <meta property="og:image" content="https://www.sumdiffgmoku.com/src/assets/og-image.">
+    <meta property="og:image" content="https://www.sumdiffgmoku.com/og-image.png">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
 
@@ -25,13 +25,11 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="합차오목 - 온라인 실시간 대전 전략 게임">
     <meta name="twitter:description" content="친구들과 함께 즐기는 실시간 합차오목 게임. 지금 바로 무료로 플레이하세요!">
-    <meta name="twitter:image" content="https://www.sumdiffgmoku.com/src/assets/og-image">
+    <meta name="twitter:image" content="https://www.sumdiffgmoku.com/og-image.png">
 
     <!-- 네이버 웹마스터 도구 인증 -->
     <meta name="naver-site-verification" content="9b84ecd67d2bfe37528786bad1cdf166e3e49f01" />
 
-    <!-- 다음 웹마스터 도구 인증 -->
-    <meta name="daum-site-verification" content="your-verification-code">
     <link rel="icon" type="image/svg+xml" href="/logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>합차오목</title>
