chore: add Google AdSense verification tag

--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
     <!-- 네이버 웹마스터 도구 인증 -->
     <meta name="naver-site-verification" content="9b84ecd67d2bfe37528786bad1cdf166e3e49f01" />
 
+    <!-- 구글 애드센스 사이트 검토를 위한 태그 -->
+    <script type="text/javascript" src="//t1.daumcdn.net/kas/static/ba.min.js" async></script>
+
     <link rel="icon" type="image/svg+xml" href="/logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>합차오목</title>
